syntax = "proto2";
package api.model;

option java_package = "org.zwiftj.api.model";
message HashSeed {
	required uint64 seed1 = 1;
	required uint64 seed2 = 2;
	required uint64 expiryDate = 3;
}

message HashSeeds {
	repeated HashSeed seeds = 1;
}
